src/scss/_base.scss
h1, .h1 {padding-top: 1em;
        padding-bottom: 0.5em; 
        letter-spacing: 0.07em;
        font-weight: 300; }
h2, .h2 {padding-top: 1em; font-weight: 300; letter-spacing: 0.07em; }
h3, .h3 {padding-top: 1em; font-weight: 300; letter-spacing: 0.07em; }
h4, .h4 {padding-top: 1em; font-weight: 300; letter-spacing: 0.07em;}
h5, .h5 {padding-top: 1em; font-weight: 700; letter-spacing: 0.07em;}


p {
    font-weight: 300;
}

p a {
    color: $primary;
}

.navbar-nav a {
    text-decoration: none;
}

.ghc-spodek-picture {
    margin-bottom: -40px;
}

@media print {
    .ghc-spodek {
        display: none;
    }
}

.ghc-spodek a {
    color: $primary;
}

.ghc-spodek a:hover, 
.ghc-spodek a.active {
    color: $gray-400;
}

.ghc-negative-margin-fix { /* to use if there is no image at the bottom */
    padding: 40px;
}

.ghc-annotation {
    font-size: 1.25rem;
    font-weight: 300;
}



/* HOME */

.ghc-motto {
    text-transform: uppercase;
    font-size: 2rem;
    letter-spacing: 0.07em;
}


/* MENU */

.ghc-price-list-item {
    padding-right: 5em;
    font-weight: 300;
}

.ghc-price-list-item span {
    display: block; // for IE 10
}

/* COFFEE*/

.card {
    border: 0;
}

.ghc-coffee-name {
    text-transform: uppercase;
    font-weight: 300;
    padding: 0.5em;
    margin-bottom: 0;
    border-bottom: 1px solid #d2d3d4;
    background-color: #f0f1f2;
}

.ghc-coffee-taste {
    font-style: italic;
    margin-top: 0.75em;
    font-weight: 300;
}

.ghc-coffee-about {
    font-weight: 300;
}

.card-img-top {
    min-height: 1px; // for IE 11
}

